test/corpus/asterisk_step.txt
==============
Asterisk steps
==============

Feature: This is the name of a feature
  Scenario: This is the title of a scenario
    Given this is a given step
    * this an step used when listing
    * this another step used when listing
    * and this is also step used when listing
    When this is a when step
    Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
    (scenario
      (scenario_keyword)
      (title)
      (steps
        (given_steps
          (given_step
            (given_keyword)
            (step_definition)
          )
          (additional_step
            (additional_step_keyword
              (asterisk_keyword)
            )
            (step_definition)
          )
          (additional_step
            (additional_step_keyword
              (asterisk_keyword)
            )
            (step_definition)
          )
          (additional_step
            (additional_step_keyword
              (asterisk_keyword)
            )
            (step_definition)
          )
        )
        (when_step
          (when_keyword)
          (step_definition)
        )
        (then_steps
          (then_step
            (then_keyword)
            (step_definition)
          )
        )
      )
    )
  )
)
