test/corpus/doc_string.txt
==========
Doc string
==========

Feature: This is a feature
  Scenario: This is a scenario
    Given this is a given step
	  """
	  this is text
      it is multiline
	  """
	When this is a when step
    Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
    (scenario
	  (scenario_keyword)
      (title)
	  (steps
	    (given_steps
		  (given_step
		    (given_keyword)
			(step_definition)
			(step_arguments
			  (doc_string
			    (doc_string_delimiter)
			    (doc_string_content)
			    (doc_string_delimiter)
			  )
			)
		  )
		)
		(when_step
		  (when_keyword)
		  (step_definition)
		)
		(then_steps
		  (then_step
		    (then_keyword)
		    (step_definition)
		  )
		)
	  )
	)
  )
)
