test/corpus/doc_string_with_content_type.txt
============================
Doc string with content type
============================

Feature: This is the name of a feature
  Scenario: This is the title of a scenario
    Given this is a given step
    When this is a when step
	  ```markdown
	  This also is a doc string
      step parameter.
	  It is delimited with backticks
	  ```
    Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
    (scenario
      (scenario_keyword)
      (title)
      (steps
        (given_steps
          (given_step
            (given_keyword)
            (step_definition)
          )
        )
        (when_step
          (when_keyword)
          (step_definition)
		  (step_arguments
		    (doc_string
			  (doc_string_delimiter)
			  (doc_string_content_type)
			  (doc_string_content)
			  (doc_string_delimiter)
			)
		  )
        )
        (then_steps
          (then_step
            (then_keyword)
            (step_definition)
          )
        )
      )
    )
  )
)
