test/corpus/rule_with_background.txt
====================
Rule with background
====================

Feature: This is the name of a feature

  Rule: This a rule

  This rule has a description

  Descriptions can be multiline
  and line descriptions do not have to be capitalized

    Background:
	  Given this a background
	  And this is also a background
	
    Scenario: This is the title of a scenario
      Given this is a given step
      When this is a when step
      Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (rules
    (rule
      (rule_keyword)
      (title)
      (description)
      (scenarios
		(background
		  (background_keyword)
		  (given_steps
		    (given_step
			  (given_keyword)
			  (step_definition)
			)
			(additional_step
			  (additional_step_keyword
			    (and_keyword)
			  )
			  (step_definition)
			)
		  )
		)
        (scenario
          (scenario_keyword)
          (title)
          (steps
            (given_steps
              (given_step
                (given_keyword)
                (step_definition)
              )
            )
            (when_step
              (when_keyword)
              (step_definition)
            )
            (then_steps
              (then_step
                (then_keyword)
                (step_definition)
              )
            )
          )
        )
      )
    )
  )
)
