test/corpus/two_given_steps_one_when_steps_two_then_steps.txt
===========================
Two given one when two then
===========================

Feature: This is the name of a feature
  Example: This is the title of a scenario
    Given this is a given step
    Given this is another given step
    When this is a when step
    Then this is a then step
    Then this is another then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
    (scenario
      (scenario_keyword)
      (title)
      (steps
        (given_steps
          (given_step
            (given_keyword)
            (step_definition)
          )
          (given_step
            (given_keyword)
            (step_definition)
          )
        )
        (when_step
          (when_keyword)
          (step_definition)
        )
        (then_steps
          (then_step
            (then_keyword)
            (step_definition)
          )
          (then_step
            (then_keyword)
            (step_definition)
          )
        )
      )
    )
  )
)
