test/corpus/when_then_only.txt
==================================
Having only when and then as steps
==================================

Feature: This is the name of a feature
  Example: This is the title of a scenario
    When this is a when step
    Then this is a then step

---

(feature
  (feature_keyword)
  (title)
  (scenarios
    (scenario
      (example_keyword)
      (title)
      (steps
        (when_step
          (when_keyword)
          (step_definition)
        )
        (then_steps
          (then_step
            (then_keyword)
            (step_definition)
          )
        )
      )
    )
  )
)
